force-app/main/default/objects/MyTime_Settings__c/MyTime_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MyTime Settings</label>
</CustomObject>