force-app/main/default/objects/MyTime_Settings__c/fields/Allowed_Domains__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Domains__c</fullName>
    <label>Allowed Domains</label>
    <type>TextArea</type>
</CustomField>