force-app/main/default/objects/MyTime_Settings__c/fields/Days_Off__c.field-meta.xml
<CustomField>
    <fullName>Days_Off__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>