force-app/main/default/objects/MyTime_Settings__c/fields/Hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Hours per week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>