force-app/main/default/objects/MyTime_Settings__c/fields/Illnesses__c.field-meta.xml
<CustomField>
    <fullName>Illnesses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Illnesses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>