force-app/main/default/objects/MyTime_Settings__c/fields/Salary_Day_number_of_day__c.field-meta.xml
<CustomField>
    <fullName>Salary_Day_number_of_day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Salary Day(number of day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>