force-app/main/default/objects/MyTime_Settings__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>