force-app/main/default/objects/MyTime_Settings__c/fields/Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Vacancies__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vacancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>